--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body section.cuerpo {
     flex-direction: column;
     position: relative;
     align-items: center;
-    padding: 750px 0px 0px 0px;
+    padding: 900px 0px 0px 0px;
 }
 
 h2 {
@@ -119,7 +119,8 @@ body section.medio div{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0px 940px;
+    align-items: center;
+    margin: 0px 0px 100px 0px;
 }
 
 body section.masmedio div.abajo span{
@@ -134,7 +135,7 @@ body section.masmedio p {
 }
 .Documentos {
     margin: 10px;
-    width: 300px;
+    width: 400px;
     height: 30px;
     background: saddlebrown;
     color: white;
@@ -142,4 +143,191 @@ body section.masmedio p {
     align-items: center;
     padding-top: 7px;
     font-size: 12px;
+}
+body section.masmedio div.abajo div.botonesinf {
+    display: flex;
+    width: 318px;
+    margin: auto;    
+}
+body section.masmedio div.abajo div.botonesinf span.enviar{
+    justify-content: space-evenly;
+    margin: 10px;
+    width: 300px;
+    height: 30px;
+    background: gray;
+    color: white;
+    border-radius: 10px;
+    align-items: center;
+    padding-top: 2px;
+    font-size: 12px;
+}
+body section.masmedio div.abajo div.botonesinf span.borrar{
+    justify-content: space-evenly;
+    margin: 10px;
+    width: 300px;
+    height: 30px;
+    background: orange;
+    color: white;
+    border-radius: 10px;
+    align-items: center;
+    padding-top: 2px;
+    font-size: 12px;
+}
+
+footer section.footerprincipal {
+    
+    background-color: orange;
+    color: white;
+}
+footer section.footerprincipal div{
+display: flex;
+justify-content: space-between;    
+}
+
+footer section.footerprincipal p.titulofooter
+{
+    padding: 20px 0px 20px 40px;
+    font-size: 25px;
+}
+
+footer section.footerprincipal div div.infofooter {
+    width: 500px;
+    height: 69px;
+    text-align: center;
+    align-items: center;
+    padding: 0px 80px;
+}
+
+.formato {
+    padding: 12px 80px 12px 12px;
+    border-radius: 10px;
+    background-color: white;
+    color: grey;
+    font-size: 9px;
+}
+.Suscribirme {
+    margin: 0px 10px;
+    padding: 8px;
+    border-radius: 10px;
+    background-color: saddlebrown;
+    color: white;
+    font-size: 10px;
+}
+.Titulo {
+    font-size: 30px;
+    color: white;
+}
+.sub {
+    font-size: 15px;
+    color: gray;
+}
+.footertitulo {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0px 0px 130px;
+    height: 300px;
+    width: 500px;
+    justify-content: space-evenly;
+}
+footer section section.footertitulo div {
+    display: flex;
+    flex-direction: column;
+}
+footer section.cafe {
+    background-color: saddlebrown;
+    height: 300px;
+}
+footer section.iconos div i{
+    width: 60px;
+    height: 60px;
+    color: orange;
+}
+footer section.iconos {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 300px;
+    width: 80px;
+    margin: 0px 0px 15px 50px;
+    padding-top: 20px;
+}
+footer section p.pie {
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-size: 17px;
+    padding: 2px;
+}
+
+@media (max-width: 850px) {
+.principal div.slide{
+   
+position: absolute;
+width: auto;
+height: auto;
+top: 200px;
+left: 50px;
+font-size-adjust: inherit;
+}
+@media (max-width: 850px) {
+    .principal{ width: fit-content;
+    height: fit-content;
+content: inherit}
+}
+
+
+@media (max-width: 850px) {
+    body section.cuerpo  {
+        
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        align-items: center;
+        padding: 400px 0px 0px 0px;
+    }
+}
+
+@media (max-width: 850px) {
+    body section.medio {
+        
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        height: 1000px;
+        margin: 50px 200px;
+    }
+}
+
+@media (max-width: 850px) {
+    section.footertitulo {
+        align-content: center;
+        text-align: center;
+        width: 750px;
+        display: flex;
+        flex-direction: column;
+        ;
+    }
+}
+@media (max-width: 850px) {
+    section.cafe {
+        align-content: center;
+        text-align: center;
+        width: 850px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 850px) {
+    section.iconos {
+        display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 300px;
+    width: 80px;
+    margin: 0px 0px 15px 400px;
+    padding-top: 20px;
+    }
 }
